--- a/MvcOwin/Web.config
+++ b/MvcOwin/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="MvcOwin.Properties.Settings.ConnectionString" connectionString="Data Source=.;Initial Catalog=auth;Integrated SSPI=True;" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
